@@ -29,4 +29,11 @@ allprojects {
     repositories {
         mavenCentral()
     }
+
+    tasks.withType(JavaCompile) {
+        options.compilerArgs += '--enable-preview'
+    }
+    tasks.withType(Test) {
+        jvmArgs += "--enable-preview"
+    }
 }
